Fixed lots of bugs in the interface. Now it handles ajax correctly. Still fails when trying to upload more than one file, frigging fileupload... Finished the z-index implementation

--- a/GrassCMS/grasscms/static/css/style.css
+++ b/GrassCMS/grasscms/static/css/style.css
@@ -9,13 +9,10 @@
 textarea, iframe { border:0px!important; }
 .cke_toolbox_collapser { display:none; }
 
-#standard_tools{
-    position:fixed;
-    top:0px;
-    left:320px;
-    z-index:2010;
+.standard_tools{
+    position:absolute;
+    z-index:3010;
     display:none;
-    width:400px!important;
 }
 
 .cke_top{
